syntax = "proto3";

package domain;

option go_package = "pkg/pb;pb";

message TransactionRequest {
  uint64 id = 1;
}

message TransactionResponse {
  uint64 id = 1;
  string name = 2;
  string email = 3;
}

message TransactionsResponse {
  repeated TransactionResponse transactions = 1;
}

service TransactionsService {
  rpc Save (TransactionRequest) returns (TransactionResponse);
  rpc Find (TransactionRequest) returns (TransactionsResponse);
}
